--- a/views/privada/gestion_tipo_empleado.html
+++ b/views/privada/gestion_tipo_empleado.html
@@ -151,18 +151,7 @@
                 </thead>
                 <tbody id="tbody-tipo-empleado">
                     <!-- Linea de Informacion -->
-                    <tr>
-                        <td>Rogelio Gadabriel Cardonado Mandanghi</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
+              
                 </tbody>
             </table>
         </div>
@@ -210,8 +199,9 @@
                         <div class="row">
                             <div class="col">
                                 <label for="tipo_acabado_update" class="form-label">Nombre de Tipo Empleado.</label>
-                                <input type="text" class="form-control" id="tipo_empleado_update" name="tipo_empleado_update"
-                                    placeholder="Escriba un nombre a la Tipo Empleado" required>
+                                <input type="text" class="form-control" id="tipo_empleado_update"
+                                    name="tipo_empleado_update" placeholder="Escriba un nombre a la Tipo Empleado"
+                                    required>
                                 <div class="custom-control custom-switch">
                                     <input type="checkbox" class="custom-control-input" id="visibilidad">
                                     <label class="custom-control-label" for="visibilidad">Visible?</label>
@@ -303,6 +293,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <script src="../../controller/privado/tipo_empleado.js "></script>
 
 </body>
 
