--- a/views/privada/gestion_tipo_propiedad.html
+++ b/views/privada/gestion_tipo_propiedad.html
@@ -58,6 +58,11 @@
                                     Propietario</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="gestion_cliente.html"><img
+                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
+                                    de Cliente</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="gestion_inquilino.html"><img
                                         src="../../resources/img/iconos_navbar/person_30px.png">Gestion
                                     Inquilino</a>
@@ -121,7 +126,7 @@
             </div>
         </nav>
         <div class="container-fluid" id="encabezado">
-            <h1>GESTIÓN DE TIPO EMPLEADO</h1>
+            <h1>GESTIÓN DE TIPO PROPIEDAD</h1>
         </div>
     </header>
     <main>
@@ -151,18 +156,6 @@
                 </thead>
                 <tbody id="tbody-tipo-propiedad">
                     <!-- Linea de Informacion -->
-                    <tr>
-                        <td>Rogelio Gadabriel Cardonado Mandanghi</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </div>
@@ -184,12 +177,15 @@
                                     <label for="tipo_propiedad" class="form-label">Nombre de Tipo Propiedad.</label>
                                     <input type="text" class="form-control" id="tipo_propiedad" name="tipo_propiedad"
                                         placeholder="Escriba un nombre a la Tipo Propiedad" required>
+                                    <select onchange="selectIdCategoria('listado_categorias_id')"
+                                        id="listado_categorias_id" name="proveedores_select" class="form-control">
+                                    </select>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" id="btnmenu"><a
+                                <button type="submit" class="btn btn-primary" data-bs-toggle="modal" id="btnmenu"><a
                                         class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
                                 <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
@@ -218,17 +214,16 @@
                                         Propiedad.</label>
                                     <input type="text" class="form-control" id="tipo_propiedad_update"
                                         name="tipo_propiedad_update" required>
-                                    <p></p>
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input" id="visibilidad" name="visibilidad">
-                                        <label class="custom-control-label" for="visibilidad">Visible?</label>
-                                    </div>
+                                        <select onchange="selectIdCategoria('listado_categorias_id_u')"
+                                        id="listado_categorias_id_u" name="proveedores_select" class="form-control">
+                                    </select>
+                                        <input id="switchButton" type="button" onclick="cambiarEstadoTipoPropiedad()">
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
-                                <button type="button" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
+                                <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/editar_26px.png"></a></button>
                                 <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
                                         class="nav-link"><img
@@ -253,9 +248,9 @@
                     <!-- Formulario de Update -->
                     <form method="post" id="delete_form">
                         <div class="modal-footer">
-                            <button class="btn btn-primary" id="btnmenu">Volver</button>
+                            <button type="submit" class="btn btn-primary" id="btnmenu">Volver</button>
                             <button class="btn btn-primary" id="btnmenu">Confirmar</button>
-                        </div>
+                         </div>
                     </form>
                 </div>
             </div>
@@ -308,6 +303,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script type="module" src="../../controller/privada/gestion_tipo_propiedad.js"></script>
+    
 
 </body>
 
