--- a/views/privada/gestion_tipo_propietario.html
+++ b/views/privada/gestion_tipo_propietario.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,8 +11,6 @@
     <link rel="stylesheet" href="../../resources/css/estilo_privado.css">
     <title>MUNEG S.A C.V</title>
 </head>
-
-
 
 <body>
     <!-- Header Privado -->
@@ -127,7 +124,7 @@
     <main>
         <!-- Searchbar -->
         <div class="container-fluid" id="busqueda">
-            <form class="d-flex">
+            <form class="d-flex" id="search-bar">
                 <input class="form-control me-2" type="search" placeholder="Búsqueda de Datos" aria-label="Search">
                 <a class="nav-link" href="#"><img src="../../resources/img/iconos_navbar/search_24px.png"></a>
             </form>
@@ -149,20 +146,8 @@
                         <th>Gestionar</th>
                     </tr>
                 </thead>
-                <tbody id="tbody-tipo-propietario">
-                    <!-- Linea de Informacion -->
-                    <tr>
-                        <td>Rogelio Gadabriel Cardonado Mandanghi</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
+                <tbody id="tbody-TipoPropietario">
+
                 </tbody>
             </table>
         </div>
@@ -177,19 +162,26 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <!-- Formulario de Insert-->
-                    <form method="post" id="insert_form">
+                    <form method="post" id="insert-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
-                                    <label for="propietario" class="form-label">Nombre de Propietario.</label>
-                                    <input type="text" class="form-control" id="propietario" name="propietario"
+                                    <label for="propietario" class="form-label">Nombre del tipo propietario</label>
+                                    <input type="text" class="form-control" id="tipo_propietario" name="tipo_propietario"
                                         placeholder="Escriba un nombre a la Propietario" required>
+                                </div>
+                                <div class="col">
+                                    <label for="" class="form-label">Visibilidad</label><br>
+                                    <label class="switch">
+                                        <input type="checkbox" id="visibilidad" name="visibilidad">
+                                        <span class="slider round"></span>
+                                    </label>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
-                                <button type="button" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
+                                <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
                                 <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
                                         class="nav-link"><img
@@ -202,36 +194,36 @@
         </div>
         <!-- Modal de ACTUALIZAR REGISTRO -->
         <div class="modal fade" id="actualizar" tabindex="-1">
-            <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header" id="formHeader">
                         <h5 class="modal-title" id="actualizarformLabel">Actualizar Propietario</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <!-- Formulario de Update-->
-                    <form action="post" id="update_form">
+                    <!-- Formulario de Insert-->
+                    <form method="post" id="update-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
-                                    <label for="tipo_propietario_update" class="form-label">Nombre de
-                                        Propietario.</label>
-                                    <input type="text" class="form-control" id="tipo_propietario_update"
-                                        name="tipo_propietario_update" required>
-                                    <p></p>
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input" id="visibilidad" name="visibilidad">
-                                        <label class="custom-control-label" for="visibilidad">Visible?</label>
-                                    </div>
+                                    <label for="propietario" class="form-label">Nombre del tipo propietario</label>
+                                    <input type="text" class="form-control" id="tipo_propietario" name="tipo_propietario_update"
+                                        placeholder="Escriba un nombre a la Propietario" required>
+                                </div>
+                                <div class="col">
+                                    <label for="" class="form-label">Visibilidad</label><br>
+                                    <label class="switch">
+                                        <input type="checkbox" id="visibilidad" name="visibilidad">
+                                        <span class="slider round"></span>
+                                    </label>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" id="btnmenu"><a
+                                <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
+                                            src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
+                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
                                         class="nav-link"><img
-                                            src="../../resources/img/iconos_formularios/editar_26px.png"></a></button>
-                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"
-                                    aria-label="Close"><a class="nav-link"><img
                                             src="../../resources/iconos_formularios/cerrar_26px.png"></a></button>
                             </div>
                         </div>
@@ -239,7 +231,7 @@
                 </div>
             </div>
         </div>
-        <!-- Modal de ELIMINAR -->
+         <!-- Modal de ELIMINAR -->
         <div class="modal fade" id="eliminar" tabindex="-1">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -251,10 +243,11 @@
                         Desea Eliminar la información de este registro?
                     </div>
                     <!-- Formulario de Update -->
-                    <form method="post" id="delete_form">
+                    <form method="post" id="delete-form">
                         <div class="modal-footer">
-                            <button class="btn btn-primary" id="btnmenu">Volver</button>
-                            <button class="btn btn-primary" id="btnmenu">Confirmar</button>
+                            <button type="button" class="btn btn-primary" id="btnmenu"
+                                data-bs-dismiss="modal">Volver</button>
+                            <button type="submit" class="btn btn-primary" id="btnmenu">Confirmar</button>
                         </div>
                     </form>
                 </div>
@@ -277,8 +270,8 @@
                 </div>
             </div>
         </div>
-        <!-- Modal de ELIMINAR REALIZADO -->
-        <div class="modal fade" id="proceso_exito" aria-hidden="true" tabindex="-1">
+        <!-- Modal de PROCESO REALIZADO -->
+        <div class="modal fade" id="proceso_exito" tabindex="-1">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header" id="formHeader">
@@ -301,9 +294,6 @@
         </div>
     </footer>
 
-
-
-
     <!-- Activando Bootstrap desde JS -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
@@ -312,7 +302,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+    <script type="module" src="../../controller/privada/tipo_propietario.js"></script>
 </body>
 
 </html>
