--- a/views/privada/gestion_usuario.html
+++ b/views/privada/gestion_usuario.html
@@ -58,6 +58,11 @@
                                     Propietario</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="gestion_cliente.html"><img
+                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
+                                    de Cliente</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="gestion_inquilino.html"><img
                                         src="../../resources/img/iconos_navbar/person_30px.png">Gestion
                                     Inquilino</a>
@@ -148,85 +153,14 @@
                 <thead>
                     <tr>
                         <th>Nombre Usuario</th>
-                        <th>Contraseña</th>
                         <th>Tipo de Usuario</th>
                         <th>Dueño del Usuario</th>
-                        <th>Ver más...</th>
+                        <th>Gestionar</th>
+
                     </tr>
                 </thead>
                 <tbody id="tbody-usuario">
                     <!-- Linea de Informacion -->
-                    <tr>
-                        <td>CrisPa-Fer</td>
-                        <td>AKDOE-0394-394riLO-235</td>
-                        <td>Empleado</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>CrisPa-Fer</td>
-                        <td>AKDOE-0394-394riLO-235</td>
-                        <td>Empleado</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>CrisPa-Fer</td>
-                        <td>AKDOE-0394-394riLO-235</td>
-                        <td>Empleado</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>CrisPa-Fer</td>
-                        <td>AKDOE-0394-394riLO-235</td>
-                        <td>Empleado</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>CrisPa-Fer</td>
-                        <td>AKDOE-0394-394riLO-235</td>
-                        <td>Empleado</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-
                 </tbody>
             </table>
         </div>
@@ -316,31 +250,19 @@
                                         <div class="col-12">
                                             <label for="nombre_usuario_update" class="form-label">Nombre de
                                                 Usuario</label>
-                                            <input type="text" class="form-control" id="nombre_usuario_update"
-                                                name="nombre_usuario_update">
-                                        </div>
-                                        <div class="col-12">
-                                            <label for="password_update" class="form-label">Password</label>
-                                            <input type="text" class="form-control" id="password_update"
-                                                name="password_update">
+                                            <input type="text" class="form-control" id="nombre_usuario"
+                                                name="nombre_usuario">
                                         </div>
                                         <div class="col-md-12">
                                             <label for="tipo_usuario_update" class="form-label">Tipo Usuario</label>
-                                            <select id="tipo_usuario_update" name="tipo_usuario_update"
-                                                class="form-control">
-
-                                            </select>
-                                        </div>
-                                        <div class="col-12">
-                                            <label for="propietario_update" class="form-label">Propietario</label>
-                                            <select id="propietario_update" name="propietario_update"
+                                            <select onchange="selectTipoUsuario('cmbtipo_usuario_update')" id="cmbtipo_usuario_update" name="cmb_tipo_usuario_update"
                                                 class="form-control">
 
                                             </select>
                                         </div>
                                         <div class="col-12">
                                             <label for="empleado_update" class="form-label">Empleado</label>
-                                            <select id="empleado_update" name="empleado_update" class="form-control">
+                                            <select onchange="('cmb_empleado_update')" id="cmb_empleado_update" name="cmb_empleado_update" class="form-control">
 
                                             </select>
                                         </div>
@@ -441,12 +363,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script type="module" src="../../controller/privada/usuario.js"></script>
 
 </body>
 
-<footer>
-
-
-</footer>
 
 </html>
