Intentando poner un modal de datos agregados

--- a/views/publica/contactenos.html
+++ b/views/publica/contactenos.html
@@ -155,15 +155,19 @@
                 <div class="card-body">
                   <h5 class="card-title">Llamenos o escribanos por medio de:</h5>
                   <div class="phones">
-                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/phone_verder.png" alt="">+503 2256-4587</h6>
-                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/phone_verder.png" alt="">+503 7784-2412</h6>
-                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/correo.png" alt="">muneg@bienesraices.com</h6>
+                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/phone_verder.png" alt="">+503
+                      2256-4587</h6>
+                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/phone_verder.png" alt="">+503
+                      7784-2412</h6>
+                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/correo.png"
+                        alt="">muneg@bienesraices.com</h6>
 
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="../../resources/img/pagina_principal/casa1.jpg" id="imgj" class="img-fluid rounded-start " alt="...">
+                <img src="../../resources/img/pagina_principal/casa1.jpg" id="imgj" class="img-fluid rounded-start "
+                  alt="...">
               </div>
             </div>
           </div>
@@ -182,13 +186,16 @@
                 <div class="card-body">
                   <h5 class="card-title">Siguenos en nuestras redes sociales:</h5>
                   <div class="phones">
-                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/Instagram_30px.png" alt="">Instagram</h6>
-                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/Facebook_30px.png" alt="">Facebook</h6>
+                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/Instagram_30px.png"
+                        alt="">Instagram</h6>
+                    <h6 class="card-text"><img src="../../resources/img/iconos_navbar/Facebook_30px.png" alt="">Facebook
+                    </h6>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="../../resources/img/pagina_principal/casa1.jpg" id="imgj" class="img-fluid rounded-start " alt="...">
+                <img src="../../resources/img/pagina_principal/casa1.jpg" id="imgj" class="img-fluid rounded-start "
+                  alt="...">
               </div>
             </div>
           </div>
@@ -206,7 +213,8 @@
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="col-12">
-              <a class="navbar-brand" id="contactenos_footer" href="#">CONTACTENOS: <img src="../../resources/img/iconos_navbar/phone_30px.png">
+              <a class="navbar-brand" id="contactenos_footer" href="#">CONTACTENOS: <img
+                  src="../../resources/img/iconos_navbar/phone_30px.png">
                 2278-9879</a>
             </div>
             <div class="col-12">
@@ -258,18 +266,18 @@
               <img src="../../resources/img/iconos_navbar/gmail.png">
             </div>
             <div class="col-10">
-              <p>Ingrese su nombre:</p>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Ingrese su nombre">
+              <form method="post" id="insert-modal">
+                <p>Ingrese su nombre:</p>
+                <input type="text" class="form-control" name="nombre_cliente" placeholder="Ingrese su nombre">
             </div>
             <div class="col-12">
               <p>Ingrese su correo electronico:</p>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Ingrese el correo">
+              <input type="email" class="form-control" name="correo" placeholder="Ingrese el correo">
             </div>
             <div class="col-12 d-flex justify-content-center">
-              <a class="btn">Enviar</a>
+              <button type="submit" class="btn">Enviar</button>
             </div>
+            </form>
           </div>
         </div>
       </div>
@@ -294,6 +302,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <script type="module" src="../../controller/publica/navbar.js"></script>
+  <script type="module" src="../../controller/publica/index.js"></script>
+  <script type="module" src="../../controller/publica/footer.js"></script>
 
 </body>
 
