--- a/views/publica/index.html
+++ b/views/publica/index.html
@@ -249,7 +249,8 @@
               <input type="email" class="form-control" name="correo" placeholder="Ingrese el correo">
             </div>
             <div class="col-12 d-flex justify-content-center">
-              <button type="submit" class="btn">Enviar</button>
+              <button type="submit" class="btn" data-bs-toggle="modal"
+              data-bs-target="#agregado">Enviar</button>
             </div>
             </form>
           </div>
@@ -257,6 +258,24 @@
       </div>
     </div>
   </footer>
+
+  <!-- Modal de correo agregado -->
+  <div class="modal fade" id="agregado" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header" id="formHeader">
+                <h5 class="modal-title" id="exampleModalToggleLabel4">Agregado con éxito</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                El registro se ha agregado con éxito. Espera las novedades que te mandaremos!
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" data-bs-dismiss="modal" id="btnmenu">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
