--- a/views/publica/preguntas_frecuentes.html
+++ b/views/publica/preguntas_frecuentes.html
@@ -207,7 +207,7 @@
 
   </main>
 
-  <!--Segundo footer Footer-->
+    <!--Segundo footer Footer-->
   <footer class="text-white  pt-5 pb-4" id="Segundofooter">
     <div class="container-fluid">
       <div class="row">
@@ -245,18 +245,18 @@
               <img src="../../resources/img/iconos_navbar/gmail.png">
             </div>
             <div class="col-10">
-              <p>Ingrese su nombre:</p>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Ingrese su nombre">
+              <form method="post" id="insert-modal">
+                <p>Ingrese su nombre:</p>
+                <input type="text" class="form-control" name="nombre_cliente" placeholder="Ingrese su nombre">
             </div>
             <div class="col-12">
               <p>Ingrese su correo electronico:</p>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Ingrese el correo">
+              <input type="email" class="form-control" name="correo" placeholder="Ingrese el correo">
             </div>
             <div class="col-12 d-flex justify-content-center">
-              <a class="btn">Enviar</a>
+              <button type="submit" class="btn">Enviar</button>
             </div>
+            </form>
           </div>
         </div>
       </div>
@@ -279,6 +279,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <script type="module" src="../../controller/publica/navbar.js"></script>
+  <script type="module" src="../../controller/publica/index.js"></script>
+  <script type="module" src="../../controller/publica/footer.js"></script>
 </body>
 
 
