--- a/views/publica/propiedades_alquiler.html
+++ b/views/publica/propiedades_alquiler.html
@@ -189,18 +189,18 @@
               <img src="../../resources/img/iconos_navbar/gmail.png">
             </div>
             <div class="col-10">
-              <p>Ingrese su nombre:</p>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Ingrese su nombre">
+              <form method="post" id="insert-modal">
+                <p>Ingrese su nombre:</p>
+                <input type="text" class="form-control" name="nombre_cliente" placeholder="Ingrese su nombre">
             </div>
             <div class="col-12">
               <p>Ingrese su correo electronico:</p>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Ingrese el correo">
+              <input type="email" class="form-control" name="correo" placeholder="Ingrese el correo">
             </div>
             <div class="col-12 d-flex justify-content-center">
-              <a class="btn">Enviar</a>
+              <button type="submit" class="btn">Enviar</button>
             </div>
+            </form>
           </div>
         </div>
       </div>
