--- a/views/privada/gestion_propiedad.html
+++ b/views/privada/gestion_propiedad.html
@@ -132,9 +132,9 @@
     <main>
         <!-- Searchbar -->
         <div class="container-fluid" id="busqueda">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Búsqueda de Datos" aria-label="Search">
-                <a class="nav-link" href="#"><img src="../../resources/img/iconos_navbar/search_24px.png"></a>
+            <form class="d-flex" method="post" id="search-bar">
+                <input class="form-control me-2" name="search" placeholder="Búsqueda de Datos" aria-label="Search" required>
+                <button class="btn" type="submit"><img src="../../resources/img/iconos_navbar/search_24px.png"></button>
             </form>
         </div>
         <!-- Botones de SCRUD, actualizar y agregar -->
@@ -164,101 +164,6 @@
                 </thead>
                 <tbody id="tbody-propiedad">
                     <!-- Linea de Informacion -->
-                    <tr>
-                        <td><img src="../img/home_100px.png"></td>
-                        <td>La Cima, San Salvador, El Salvador</td>
-                        <td>rj-02013</td>
-                        <td>350,000.00$</td>
-                        <td>750.00$</td>
-                        <td>Mi casa es grande. Tiene un salón comedor, una cocina,
-                            tres cuartos de baños y cuatro dormitorios.</td>
-                        <td>10</td>
-                        <td>3</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><img src="../img/home_100px.png"></td>
-                        <td>La Cima, San Salvador, El Salvador</td>
-                        <td>rj-02013</td>
-                        <td>350,000.00$</td>
-                        <td>750.00$</td>
-                        <td>Mi casa es grande. Tiene un salón comedor, una cocina,
-                            tres cuartos de baños y cuatro dormitorios.</td>
-                        <td>10</td>
-                        <td>3</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><img src="../img/home_100px.png"></td>
-                        <td>La Cima, San Salvador, El Salvador</td>
-                        <td>rj-02013</td>
-                        <td>350,000.00$</td>
-                        <td>750.00$</td>
-                        <td>Mi casa es grande. Tiene un salón comedor, una cocina,
-                            tres cuartos de baños y cuatro dormitorios.</td>
-                        <td>10</td>
-                        <td>3</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><img src="../img/home_100px.png"></td>
-                        <td>La Cima, San Salvador, El Salvador</td>
-                        <td>rj-02013</td>
-                        <td>350,000.00$</td>
-                        <td>750.00$</td>
-                        <td>Mi casa es grande. Tiene un salón comedor, una cocina,
-                            tres cuartos de baños y cuatro dormitorios.</td>
-                        <td>10</td>
-                        <td>3</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><img src="../img/home_100px.png"></td>
-                        <td>La Cima, San Salvador, El Salvador</td>
-                        <td>rj-02013</td>
-                        <td>350,000.00$</td>
-                        <td>750.00$</td>
-                        <td>Mi casa es grande. Tiene un salón comedor, una cocina,
-                            tres cuartos de baños y cuatro dormitorios.</td>
-                        <td>10</td>
-                        <td>3</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </div>
@@ -278,81 +183,81 @@
                             <div class="row">
                                 <div class="col">
                                     <label for="direccion" class="form-label">Direccion</label>
-                                    <textarea id="direccion" name="direccion" rows="8" class="form-control"
+                                    <textarea id="direccion" name="direccion_update" rows="8" class="form-control"
                                         placeholder="Escriba la Direccion"></textarea>
 
                                     <label for="area_propiedad" class="form-label">Área Propiedad</label>
-                                    <input type="number" class="form-control" id="area_propiedad" name="area_propiedad"
+                                    <input type="number" class="form-control" id="area_propiedad_i" name="area_propiedad_update"
                                         placeholder="0 Km2">
 
                                     <label for="area_construccion" class="form-label">Área Construcción</label>
                                     <input type="number" class="form-control" id="area_construccion"
-                                        name="area_construccion" placeholder="0 Km2">
+                                        name="area_construccion_update" placeholder="0 Km2">
 
                                     <label for="codigo" class="form-label">Código</label>
-                                    <input type="text" class="form-control" id="codigo" name="codigo"
+                                    <input type="text" class="form-control" id="codigo" name="codigo_update"
                                         placeholder="Ingrese un codigo">
 
                                     <label for="precio" class="form-label">Precio</label>
-                                    <input type="number" class="form-control" id="precio" name="precio"
+                                    <input type="number" class="form-control" id="precio" name="precio_update"
                                         placeholder="00.00$">
                                 </div>
                                 <div class="col">
                                     <label for="alquiler" class="form-label">Alquiler</label>
-                                    <input type="number" class="form-control" id="alquiler" name="alquiler"
+                                    <input type="number" class="form-control" id="alquiler_i" name="alquiler_update"
                                         placeholder="00.00$">
 
                                     <label for="habitaciones" class="form-label">Habitaciones</label>
-                                    <input type="number" class="form-control" id="habitaciones" name="habitaciones"
+                                    <input type="number" class="form-control" id="habitaciones" name="habitaciones_update"
                                         placeholder="0 Habitaciones">
 
                                     <label for="plantas" class="form-label">Plantas</label>
-                                    <input type="text" class="form-control" id="plantas" name="plantas"
+                                    <input type="text" class="form-control" id="plantas" name="plantas_update"
                                         placeholder="0 Plantas">
 
                                     <label for="sanitario" class="form-label">Sanitario</label>
-                                    <input type="text" class="form-control" id="sanitario" name="sanitario"
+                                    <input type="text" class="form-control" id="sanitario" name="sanitario_update"
                                         placeholder="0 Baños">
 
                                     <label for="espacio_parqueo" class="form-label">Espacio de Parqueo</label>
-                                    <input type="text" class="form-control" id="espacio_parqueo" name="espacio_parqueo"
+                                    <input type="text" class="form-control" id="espacio_parqueo_i" name="espacio_update"
                                         placeholder="0 Vehiculos">
 
                                     <label for="descripcion" class="form-label">Descripción</label>
-                                    <textarea id="descripcion" name="descripcion" rows="6" class="form-control"
+                                    <textarea id="descripcion_i" name="descripcion_update" rows="6" class="form-control"
                                         placeholder="Escriba una Descripción"></textarea>
                                 </div>
 
                                 <div class="col">
                                     <label for="tipo_acabado" class="form-label">Tipo de Acabados</label>
-                                    <select id="tipo_acabado" name="tipo_acabado" class="form-control">
+                                    <select onchange="selectTipoAcabado('cmb_tipo_acabado')" id="cmb_tipo_acabado" name="tipo_acabado" class="form-control">
 
                                     </select>
 
                                     <label for="municipio" class="form-label">Municipio</label>
-                                    <select id="municipio" name="municipio" class="form-control">
+                                    <select onchange="selectMunicipio('cmb_municipio')" id="cmb_municipio" name="municipio" class="form-control">
 
                                     </select>
 
                                     <label for="tipo_propiedad" class="form-label">Tipo de Propiedad</label>
-                                    <select id="tipo_propiedad" name="tipo_propiedad" class="form-control">
+                                    <select onchange="selectTipoPropiedad('cmb_tipo_propiedad')" id="cmb_tipo_propiedad" name="tipo_propiedad" class="form-control">
 
                                     </select>
 
                                     <label for="inquilino" class="form-label">Inquilino</label>
-                                    <select id="inquilino" name="inquilino" class="form-control">
+                                    <select onchange="selectInquilino('cmb_inquilino')" id="cmb_inquilino" name="inquilino" class="form-control">
 
                                     </select>
 
                                     <label for="empleado" class="form-label">Empleado</label>
-                                    <select id="empleado" name="empleado" class="form-control">
+                                    <select  onchange="selectEmpleado('cmb_empleado')" id="cmb_empleado" name="empleado" class="form-control">
 
                                     </select>
 
                                     <label for="upload_image" class="form-label">Imagen</label>
                                     <a class="btn" name="archivo" id="upload_image">
-                                        <input type="file" class="form-control form-control-sm form-Input-Style">
-                                        <img src="../img/download_100px.png">
+                                        <input name="archivo" type="file" class="form-control form-control-sm form-Input-Style">
+                                        <img src="../../resources/img/iconos_formularios/download_100px.png">
                                     </a>
                                 </div>
                             </div>
@@ -420,44 +325,44 @@
 
                                     <label for="espacio_parqueo_update" class="form-label">Espacio de Parqueo</label>
                                     <input type="text" class="form-control" id="espacio_parqueo_update"
-                                        name="espacio_parqueo_update">
+                                        name="espacio_update">
 
-                                    <label for="descripcion_update" class="form-label">Descripción</label>
+                                    <label for="descripcion_updat" class="form-label">Descripción</label>
                                     <textarea id="descripcion_update" name="descripcion_update" rows="6"
                                         class="form-control"></textarea>
                                 </div>
 
                                 <div class="col">
                                     <label for="tipo_acabado_update" class="form-label">Tipo de Acabados</label>
-                                    <select id="tipo_acabado_update" name="tipo_acabado_update" class="form-control">
+                                    <select onchange="selectTipoAcabado('cmb_tipo_acabado_update')" id="cmb_tipo_acabado_update" name="tipo_acabado_update" class="form-control">
 
                                     </select>
 
                                     <label for="municipio_update" class="form-label">Municipio</label>
-                                    <select id="municipio_update" name="municipio_update" class="form-control">
+                                    <select  onchange="selectMunicipio('cmb_municipio_update')"  id="cmb_municipio_update" name="municipio_update" class="form-control">
 
                                     </select>
 
                                     <label for="tipo_propiedad_update" class="form-label">Tipo de Propiedad</label>
-                                    <select id="tipo_propiedad_update" name="tipo_propiedad_update"
+                                    <select onchange="selectTipoPropiedad('cmb_tipo_propiedad_update')" id="cmb_tipo_propiedad_update" name="tipo_propiedad_update"
                                         class="form-control">
 
                                     </select>
 
                                     <label for="inquilino_update" class="form-label">Inquilino</label>
-                                    <select id="inquilino_update" name="inquilino_update" class="form-control">
+                                    <select  onchange="selectInquilino('cmb_inquilino_update')" id="cmb_inquilino_update" name="inquilino_update" class="form-control">
 
                                     </select>
 
                                     <label for="empleado_update" class="form-label">Empleado</label>
-                                    <select id="empleado_update" name="empleado_update" class="form-control">
+                                    <select  onchange="selectEmpleado('cmb_empleado_update')" id="cmb_empleado_update" name="empleado_update" class="form-control">
 
                                     </select>
 
                                     <label for="upload_image" class="form-label">Imagen</label>
                                     <a class="btn" name="archivo" id="upload_image">
-                                        <input type="file" class="form-control form-control-sm form-Input-Style">
-                                        <img src="../img/download_100px.png">
+                                        <input name="archivo" type="file" class="form-control form-control-sm form-Input-Style">
+                                        <img src="../../resources/img/iconos_formularios/download_100px.png">
                                     </a>
                                 </div>
                             </div>
@@ -488,7 +393,7 @@
                     <!-- Formulario de Update -->
                     <form method="post" id="delete_form">
                         <div class="modal-footer">
-                            <button class="btn btn-primary" id="btnmenu">Volver</button>
+                            <button type="submit" class="btn btn-primary" id="btnmenu">Volver</button>
                             <button class="btn btn-primary" id="btnmenu">Confirmar</button>
                         </div>
                     </form>
@@ -544,6 +449,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+        <script type="module" src="../../controller/privada/propiedad.js"></script>
 </body>
 
 <footer>
