--- a/views/publica/detalle_inmueble.html
+++ b/views/publica/detalle_inmueble.html
@@ -230,7 +230,10 @@
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="../../resources/js/main.js"></script>
+    <script type="module" src="../../controller/publica/navbar.js"></script>
     <script type="module" src="../../controller/publica/detalle_propiedad.js"></script>
+    <script type="module" src="../../controller/publica/footer.js"></script>
+
 </body>
 
 </html>
