--- a/views/privada/gestion_categoria.html
+++ b/views/privada/gestion_categoria.html
@@ -58,11 +58,6 @@
                                     Propietario</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="gestion_cliente.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Cliente</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link" href="gestion_inquilino.html"><img
                                         src="../../resources/img/iconos_navbar/person_30px.png">Gestion
                                     Inquilino</a>
@@ -95,48 +90,25 @@
                                         src="../../resources/img/iconos_navbar/modern_art_30px.png">Gestion
                                     de Tipo Acabado</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_empleado.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Empleado</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_inquilino.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Inquilino</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_propiedad.html"><img
-                                        src="../../resources/img/iconos_navbar/rent_30px.png">Gestion
-                                    de Tipo Propiedad</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_propietario.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Propietario</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_usuario.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Usuario</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
         <div class="container-fluid" id="encabezado">
-            <h1>GESTIÓN DE CATEGORIA</h1>
+            <h1>GESTIÓN DE EMPLEADO</h1>
         </div>
     </header>
     <main>
         <!-- Searchbar -->
         <div class="container-fluid" id="busqueda">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Búsqueda de Datos" aria-label="Search">
-                <a class="nav-link" href="#"><img src="../../resources/img/iconos_navbar/search_24px.png"></a>
+            <form class="d-flex" method="post" id="search-bar">
+                <input class="form-control me-2" name="search" placeholder="Búsqueda de Datos" aria-label="Search"
+                    required>
+                <button class="btn" type="submit"><img src="../../resources/img/iconos_navbar/search_24px.png"></button>
             </form>
         </div>
+        <!-- Botones de SCRUD, actualizar y agregar -->
         <div class="container-fluid" id="opciones">
             <div class="btn-group" role="group">
                 <button type="button" class="btn btn-primary" id="btnmenu" data-bs-toggle="modal"
@@ -144,82 +116,27 @@
                             src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
             </div>
         </div>
+        <div class="form-check form-switch">
+            <input onclick="leerDatosEliminados()" class="form-check-input" type="checkbox" role="switch"
+                id="verDatosliminados">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Ver datos eliminados</label>
+        </div>
         <!-- Tabla de Datos -->
         <div class="container-fluid" id="tabla_datos">
             <table class="table table-responsive table-bordered">
                 <thead>
                     <tr>
+                        <th>Identificador</th>
                         <th>Nombre</th>
                         <th>Visibilidad</th>
                         <th>Gestionar</th>
                     </tr>
                 </thead>
-                <tbody id="tbody-categoria">
-                    <!-- Linea de Informacion -->
-                    <tr>
-                        <td>Rogelio Gadabriel Cardonado Mandanghi</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Rogelio Gadabriel Cardonado Mandanghi</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Rogelio Gadabriel Cardonado Mandanghi</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Rogelio Gadabriel Cardonado Mandanghi</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Rogelio Gadabriel Cardonado Mandanghi</td>
-                        <td>Cristian Fernando Parada Mira</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
+                <tbody id="tbody-Categoria">
+
                 </tbody>
             </table>
         </div>
-
 
         <!-- Modal de AGREGAR REGISTRO-->
         <div class="modal fade" id="agregar" tabindex="-1">
@@ -230,13 +147,13 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <!-- Formulario de insert-->
-                    <form method="post" id="insert_form">
+                    <form method="post" id="insert-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
-                                    <label for="categoria" class="form-label">Nombre de Categoria.</label>
-                                    <input type="text" class="form-control" id="categoria" name="categoria"
-                                        placeholder="Escriba un nombre a la Categoria" required>
+                                    <label for="categoria" class="form-label">Nombre de Categoria</label>
+                                    <input type="text" class="form-control" id="nombre_categoria"
+                                        name="nombre_categoria" placeholder="Escriba un nombre a la Categoria" required>
                                 </div>
                             </div>
                         </div>
@@ -255,24 +172,34 @@
         </div>
         <!-- Modal de ACTUALIZAR REGISTRO -->
         <div class="modal fade" id="actualizar" tabindex="-1">
-            <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header" id="formHeader">
                         <h5 class="modal-title" id="actualizarformLabel">Actualizar Categoria</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <!-- Formulario de update-->
-                    <form action="post" id="update_form">
+                    <!-- Formulario de insert-->
+                    <form method="post" id="update-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
-                                    <label for="categoria_update" class="form-label">Nombre de Categoria.</label>
-                                    <input type="text" class="form-control" id="categoria_update"
-                                        name="categoria_update" required>
-                                    <p></p>
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input" id="visibilidad">
-                                        <label class="custom-control-label" for="visibilidad">Visible?</label>
+                                    <label for="categoria" class="form-label">Nombre de Categoria.</label>
+                                    <input type="text" class="form-control" id="nombre_categoria_update"
+                                        name="nombre_categoria_update" placeholder="Escriba un nombre a la Categoria"
+                                        required>
+                                </div>
+                                <div class="col">
+                                    <div class="col">
+                                        <label for="" class="form-label">Visibilidad</label><br>
+                                        <label class="switch">
+                                            <div class="form-check form-switch">
+                                                <label class="form-check-label" for="flexSwitchCheckDefault">Hacer
+                                                    visible</label>
+                                                <input onclick="cambiarVisibilidadDeResgistro()"
+                                                    class="form-check-input" type="checkbox" role="switch"
+                                                    id="checkBocVisibilidad">
+                                            </div>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
@@ -280,11 +207,12 @@
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
                                 <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
-                                            src="../../resources/img/iconos_formularios/editar_26px.png"></a></button>
-                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal">
-                                    <a class="nav-link"><img
+                                            src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
+                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
+                                        class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/cerrar_26px.png"></a></button>
                             </div>
+
                         </div>
                     </form>
                 </div>
@@ -302,10 +230,11 @@
                         Desea Eliminar la información de este registro?
                     </div>
                     <!-- Formulario de Update -->
-                    <form method="post" id="delete_form">
+                    <form method="post" id="delete-form">
                         <div class="modal-footer">
-                            <button class="btn btn-primary" id="btnmenu">Volver</button>
-                            <button class="btn btn-primary" id="btnmenu">Confirmar</button>
+                            <button type="button" class="btn btn-primary" id="btnmenu"
+                                data-bs-dismiss="modal">Volver</button>
+                            <button type="submit" class="btn btn-primary" id="btnmenu">Confirmar</button>
                         </div>
                     </form>
                 </div>
@@ -346,13 +275,11 @@
             </div>
         </div>
     </main>
-    <footer class="text-white  pt-5 pb-4" id="Segundofooter">
+    <footer class="text-white  pt-5 pb-4 fixed-bottom" id="Segundofooter">
         <div class="container-fluid">
 
         </div>
     </footer>
-
-
 
 
     <!-- Activando Bootstrap desde JS -->
@@ -363,7 +290,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="module" src="../../controller/privada/categoria.js"></script>
 </body>
 
 </html>
