--- a/views/privada/gestion_factura.html
+++ b/views/privada/gestion_factura.html
@@ -59,11 +59,6 @@
                                     Propietario</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="gestion_cliente.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Cliente</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link" href="gestion_inquilino.html"><img
                                         src="../../resources/img/iconos_navbar/person_30px.png">Gestion
                                     Inquilino</a>
@@ -96,53 +91,29 @@
                                         src="../../resources/img/iconos_navbar/modern_art_30px.png">Gestion
                                     de Tipo Acabado</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_empleado.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Empleado</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_inquilino.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Inquilino</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_propiedad.html"><img
-                                        src="../../resources/img/iconos_navbar/rent_30px.png">Gestion
-                                    de Tipo Propiedad</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_propietario.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Propietario</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_usuario.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Usuario</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
         <div class="container-fluid" id="encabezado">
-            <h1>GESTIÓN DE FACTURA</h1>
+            <h1>GESTIÓN DE EMPLEADO</h1>
         </div>
     </header>
 
     <main>
         <!-- Searchbar -->
         <div class="container-fluid" id="busqueda">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Búsqueda de Datos" aria-label="Search">
-                <a class="nav-link" href="#"><img src="../../resources/img/iconos_navbar/search_24px.png"></a>
+            <form class="d-flex" method="post" id="search-bar">
+                <input class="form-control me-2" name="search" placeholder="Búsqueda de Datos" aria-label="Search"
+                    required>
+                <button class="btn" type="submit"><img src="../../resources/img/iconos_navbar/search_24px.png"></button>
             </form>
         </div>
 
         <!-- Botones de SCRUD, actualizar y agregar -->
         <div class="container-fluid" id="opciones">
-            <div class="btn-group" role="group" >
+            <div class="btn-group" role="group">
                 <button type="button" class="btn btn-primary" id="btnmenu" data-bs-toggle="modal"
                     data-bs-target="#agregar"><a class="nav-link" href="#"><img
                             src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
@@ -160,97 +131,19 @@
                         <th>SubTotal</th>
                         <th>IVA</th>
                         <th>Venta Gravada</th>
+                        <th>Fecha</th>
+                        <th>Inquilino</th>
                         <th>Gestionar</th>
                     </tr>
                 </thead>
-                <tbody id="tbody-inquilino">
-                    <!-- Linea de Informacion -->
-                    <tr>
-                        <td>000001</td>
-                        <td>Pago del Deposito, de los servicios basicos(agua, luz y servicios de aseo)</td>
-                        <td>Av. Josefa Arce # 13 Piso 8</td>
-                        <td>800.00$</td>
-                        <td>104.00$</td>
-                        <td>904.00$</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>000001</td>
-                        <td>Pago del Deposito, de los servicios basicos(agua, luz y servicios de aseo)</td>
-                        <td>Av. Josefa Arce # 13 Piso 8</td>
-                        <td>800.00$</td>
-                        <td>104.00$</td>
-                        <td>904.00$</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>000001</td>
-                        <td>Pago del Deposito, de los servicios basicos(agua, luz y servicios de aseo)</td>
-                        <td>Av. Josefa Arce # 13 Piso 8</td>
-                        <td>800.00$</td>
-                        <td>104.00$</td>
-                        <td>904.00$</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>000001</td>
-                        <td>Pago del Deposito, de los servicios basicos(agua, luz y servicios de aseo)</td>
-                        <td>Av. Josefa Arce # 13 Piso 8</td>
-                        <td>800.00$</td>
-                        <td>104.00$</td>
-                        <td>904.00$</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>000001</td>
-                        <td>Pago del Deposito, de los servicios basicos(agua, luz y servicios de aseo)</td>
-                        <td>Av. Josefa Arce # 13 Piso 8</td>
-                        <td>800.00$</td>
-                        <td>104.00$</td>
-                        <td>904.00$</td>
-                        <td class="d-flex justify-content-center">
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#actualizar"><img
-                                    src="../../resources/img/iconos_formularios/edit_35px.png"></a>
-                            <a class="btn" href="#" id="button_ver_mas" data-bs-toggle="modal"
-                                data-bs-target="#eliminar"><img
-                                    src="../../resources/img/iconos_formularios/trash_can_35px.png"></a>
-                        </td>
-                    </tr>
+                <tbody id="tbody-Factura">
+
                 </tbody>
             </table>
         </div>
 
         <!-- Modal de AGREGAR REGISTRO-->
-        <div class="modal fade" id="agregarform" tabindex="-1">
+        <div class="modal fade" id="agregar" tabindex="-1">
             <div class="modal-dialog modal-xl modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header" id="formHeader">
@@ -258,12 +151,12 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <!-- Formulario de Insert-->
-                    <form method="post" id="insert_form">
+                    <form method="post" id="insert-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
                                     <label for="factura" class="form-label">Código de Factura</label>
-                                    <input type="text" class="form-control" id="factura" name="factura"
+                                    <input type="text" class="form-control" id="factura" name="codigo_factura"
                                         placeholder="Escriba el número de su factura" required>
 
                                     <label for="descripcion" class="form-label">Descripción</label>
@@ -280,26 +173,27 @@
                                         placeholder="Escriba de SubTotal" required>
 
                                     <label for="iva" class="form-label">IVA</label>
-                                    <input type="number" class="form-control" id="iva" name="iva" placeholder="IVA" required>
+                                    <input type="number" class="form-control" id="IVA" name="IVA" placeholder="IVA"
+                                        required>
 
-                                    <label for="venta_grabada" class="form-label">Venta grabada</label>
-                                    <input type="text" class="form-control" id="venta_grabada" name="venta_grabada"
+                                    <label for="venta_gravada" class="form-label">Venta grabada</label>
+                                    <input type="text" class="form-control" id="venta_gravada" name="venta_gravada"
                                         placeholder="Escriba la venta grabada" required>
 
                                     <label for="fecha_emision" class="form-label">Fecha de emisión</label>
-                                    <input type="date" class="form-control" id="fecha_emision" name="fecha_emision" required>
+                                    <input type="date" class="form-control" id="fecha_emision" name="fecha_emision"
+                                        required>
 
-                                    <label for="tipo_factura" class="form-label">Tipo de Factura</label>
-                                    <select id="tipo_factura" name="tipo_factura" class="form-control">
-                                        <option value="value1" selected>Factura</option>
-                                        <option value="value2">Credito Fiscal</option>
+                                    <label for="id_inquilino" class="form-label">Inquilino</label>
+                                    <select onchange="seleccionarInquilino()" id="id_inquilino" name="id_inquilino"
+                                        class="form-control">
                                     </select>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <div class="btn-group" role="group"  id="opcionesModal">
-                                <button type="button" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
+                            <div class="btn-group" role="group" id="opcionesModal">
+                                <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
                                 <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
                                         class="nav-link"><img
@@ -319,12 +213,13 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <!-- Formulario de Update-->
-                    <form method="post" id="update_form">
+                    <form method="post" id="update-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
                                     <label for="factura_update" class="form-label">Código de Factura</label>
-                                    <input type="text" class="form-control" id="factura_update" name="factura_update" required>
+                                    <input type="text" class="form-control" id="codigo_factura_update"
+                                        name="codigo_factura_update" required>
 
                                     <label for="descripcion" class="form-label">Descripción</label>
                                     <textarea id="descripcion_update" name="descripcion_update" rows="4"
@@ -340,31 +235,30 @@
                                         name="subtotal_update" required>
 
                                     <label for="iva_update" class="form-label">IVA</label>
-                                    <input type="number" class="form-control" id="iva_update" name="iva_update" required>
+                                    <input type="number" class="form-control" id="IVA_update" name="IVA_update"
+                                        required>
 
                                     <label for="venta_grabada_update" class="form-label">Venta grabada</label>
-                                    <input type="text" class="form-control" id="venta_grabada_update"
-                                        name="venta_grabada_update" required>
+                                    <input type="text" class="form-control" id="venta_gravada_update"
+                                        name="venta_gravada_update" required>
 
                                     <label for="fecha_emision_update" class="form-label">Fecha de emisión</label>
                                     <input type="date" class="form-control" id="fecha_emision_update"
                                         name="fecha_emision_update" required>
 
-                                    <label for="tipo_factura_update" class="form-label">Tipo de Factura</label>
-                                    <select id="tipo_factura_update" name="tipo_factura_update" class="form-control">
-                                        <option value="value1" selected>Factura</option>
-                                        <option value="value2">Credito Fiscal</option>>
+                                    <label for="id_inquilino" class="form-label">Inquilino</label>
+                                    <select onchange="seleccionarInquilino()" id="id_inquilino_update"
+                                        name="id_inquilino_update" class="form-control">
                                     </select>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" id="btnmenu"><a
+                                <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
+                                            src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
+                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
                                         class="nav-link"><img
-                                            src="../../resources/img/iconos_formularios/editar_26px.png"></a></button>
-                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"
-                                    aria-label="Close"><a class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/cerrar_26px.png"></a></button>
                             </div>
                         </div>
@@ -384,10 +278,11 @@
                         Desea Eliminar la información de este registro?
                     </div>
                     <!-- Formulario de Update -->
-                    <form method="post" id="delete_form">
+                    <form method="post" id="delete-form">
                         <div class="modal-footer">
-                            <button class="btn btn-primary" id="btnmenu">Volver</button>
-                            <button class="btn btn-primary" id="btnmenu">Confirmar</button>
+                            <button type="button" class="btn btn-primary" id="btnmenu"
+                                data-bs-dismiss="modal">Volver</button>
+                            <button type="submit" class="btn btn-primary" id="btnmenu">Confirmar</button>
                         </div>
                     </form>
                 </div>
@@ -442,6 +337,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="module" src="../../controller/privada/factura.js"></script>
+
 
 </body>
 
