--- a/views/privada/gestion_usuario.html
+++ b/views/privada/gestion_usuario.html
@@ -58,11 +58,6 @@
                                     Propietario</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="gestion_cliente.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Cliente</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link" href="gestion_inquilino.html"><img
                                         src="../../resources/img/iconos_navbar/person_30px.png">Gestion
                                     Inquilino</a>
@@ -95,38 +90,13 @@
                                         src="../../resources/img/iconos_navbar/modern_art_30px.png">Gestion
                                     de Tipo Acabado</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_empleado.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Empleado</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_inquilino.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Inquilino</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_propiedad.html"><img
-                                        src="../../resources/img/iconos_navbar/rent_30px.png">Gestion
-                                    de Tipo Propiedad</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_propietario.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Propietario</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gestion_tipo_usuario.html"><img
-                                        src="../../resources/img/iconos_navbar/person_30px.png">Gestion
-                                    de Tipo Usuario</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
         <div class="container-fluid" id="encabezado">
-            <h1>GESTIÓN DE USUARIO</h1>
+            <h1>GESTIÓN DE EMPLEADO</h1>
         </div>
     </header>
     <main>
@@ -137,7 +107,11 @@
                 <a class="nav-link" href="#"><img src="../../resources/img/iconos_navbar/search_24px.png"></a>
             </form>
         </div>
-
+        <!-- Botones de SCRUD, actualizar y agregar -->
+        <div class="container-fluid  d-flex justify-content-between" id="opciones">
+            <a class="btn" id="button_ver_mas" href="gestion_tipo_usuario.html">Tipo Usuario</a>
+        </div>
+        
         <!-- Tabla de Datos -->
         <div class="container-fluid" id="tabla_datos">
             <table class="table table-responsive table-bordered">
