--- a/views/privada/index.html
+++ b/views/privada/index.html
@@ -21,9 +21,6 @@
                 <div id="con">
                     <a class="navbar-brand" href="#"><img src="../../resources/img/iconos_navbar/logo.png" id="imgnav" usemap="#home"></a>
                     <!-- Mapeando la imagen -->
-                    <map name="home">
-                        <area shape="rect" coords="0,0,311,98" href="pagina_principal.html">
-                    </map>
                 </div>
             </div>
         </nav>
@@ -57,7 +54,7 @@
                                             size="40" name="password">
                                     </div>
                                     <div class="col-12 d-flex justify-content-center">
-                                        <button type="submit" class="btn btn-primary" id="btnmenu"><a type="submit" class="btn btn-dark logIndButton">Iniciar
+                                        <button type="submit" class="btn btn-dark logIndButton" id="btnmenu"><a type="submit">Iniciar
                                             sesión</a></button>
                                     </div>
                                 </form>
@@ -75,7 +72,6 @@
 
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module" src="../../controller/privada/login.js"></script>
 </body>
 </html>
