--- a/views/publica/sobre_nosotros.html
+++ b/views/publica/sobre_nosotros.html
@@ -306,7 +306,8 @@
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="col-12">
-              <a class="navbar-brand" id="contactenos_footer" href="#">CONTACTENOS: <img src="../../resources/img/iconos_navbar/phone_30px.png">
+              <a class="navbar-brand" id="contactenos_footer" href="#">CONTACTENOS: <img
+                  src="../../resources/img/iconos_navbar/phone_30px.png">
                 2278-9879</a>
             </div>
             <div class="col-12">
@@ -392,12 +393,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <script type="module" src="../../controller/publica/navbar.js"></script>
+  <script type="module" src="../../controller/publica/footer.js"></script>
 
 </body>
-
-<footer>
-
-
-</footer>
 
 </html>
