--- a/views/privada/pagina_principal.html
+++ b/views/privada/pagina_principal.html
@@ -25,6 +25,9 @@
                   <map name="home">
                       <area shape="rect" coords="0,0,311,98" href="pagina_principal.html">
                   </map>
+                  <button onclick="logOut()" type="submit" id="cerrar_sesion" class="btn" aria-expanded="false">
+                    <h4>CERRAR SESIÓN</h4>
+                </button>
               </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                   data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
