TODOS LOS REPORTES TERMINADOS (faltan 2 extras)

--- a/MUNEG/views/privada/gestion_factura.html
+++ b/MUNEG/views/privada/gestion_factura.html
@@ -362,8 +362,8 @@
                 </div>
             </div>
         </div>
-         <!-- Modal de REPORTES -->
-         <div class="modal fade" id="reportes" tabindex="-1">
+        <!-- Modal de REPORTES -->
+        <div class="modal fade" id="reportes" tabindex="-1">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header" id="formHeader">
@@ -390,7 +390,7 @@
                             <option value="13">Diciembre</option>
                             <option value="12">Diciembre</option>
                         </select>
-                        <button onclick="generarReporteFactura()">
+                        <button onclick="generarReporteFacturaMes()">
                             Generar
                         </button>
                     </div>
