--- a/MUNEG/views/privada/gestion_propiedad.html
+++ b/MUNEG/views/privada/gestion_propiedad.html
@@ -115,6 +115,7 @@
                 <button class="btn" type="submit"><img src="../../resources/img/iconos_navbar/search_24px.png"></button>
             </form>
         </div>
+        <a class="btn" id="button_ver_mas" href="gestion_tipo_propiedad.html">Tipo Propiedad</a>
         <button onclick="abrirModalReportes()" class="btn" id="button_reportes">Gestion de reportes</button>
         <!-- Botones de SCRUD, actualizar y agregar -->
         <div class="container-fluid" id="opciones">
