--- a/MUNEG/views/privada/gestion_tipo_propiedad.html
+++ b/MUNEG/views/privada/gestion_tipo_propiedad.html
@@ -113,7 +113,7 @@
             </form>
         </div>
         <div class="container-fluid  d-flex justify-content-between" id="opciones">
-            <a class="btn" id="button_ver_mas" href="gestion_categoria.html">Categoria</a>
+            <a class="btn" id="button_ver_mas" href="gestion_propiedad.html">Propiedad</a>
             <div class="btn-group" role="group">
                 <button type="button" class="btn btn-primary" id="btnmenu" data-bs-toggle="modal"
                     data-bs-target="#agregar"><a class="nav-link"><img
